fixup: Adjust spacing/border around crash info diagram

--- a/protocol-designer/src/components/modules/styles.css
+++ b/protocol-designer/src/components/modules/styles.css
@@ -53,8 +53,8 @@
 
 .crash_info_container {
   margin: 1rem 0;
-  padding: 1rem;
   background-color: var(--c-light-gray);
+  border: 0.25rem solid var(--c-light-gray);
 }
 
 .crash_info_title {
@@ -66,8 +66,8 @@
 }
 
 .crash_info_diagram {
-  margin-top: 1rem;
-  max-width: 100%;
+  margin-bottom: 1rem;
+  width: 100%;
 }
 
 .crash_info_box {
@@ -76,6 +76,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding: 1rem;
 
   & strong {
     font-weight: var(--fw-semibold);
